# simd_field_mul

simd_mul/: Cargo.toml  README.md
simd_mul/benches/: avx_benchmark.rs
simd_mul/src/: avx.rs  lib.rs
